--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     <div class="icon">🔘</div>
                     <h3>Switch Toggle</h3>
                     <p>Красивые переключатели с различными стилями и анимациями</p>
-                    <a href="Switch toggle.html" class="btn">Открыть</a>
+                    <a href="https://yatavo.github.io/Glowing-cards-in-html-css/cards.html" class="btn">Открыть</a>
                 </div>
 
                 <div class="project-card" onclick="location.href='cards.html'">
