--- a/index.html
+++ b/index.html
@@ -138,22 +138,16 @@
                     <div class="icon">🔘</div>
                     <h3>Switch Toggle</h3>
                     <p>Красивые переключатели с различными стилями и анимациями</p>
-                    <a href="https://yatavo.github.io/Glowing-cards-in-html-css/cards.html" class="btn">Открыть</a>
+                    <a href="https://yatavo.github.io/dark-light-switch-toggle/Switch%20toggle.html" class="btn">Открыть</a>
                 </div>
 
                 <div class="project-card" onclick="location.href='cards.html'">
                     <div class="icon">🎴</div>
                     <h3>Cards</h3>
                     <p>Современные карточки с hover-эффектами и адаптивным дизайном</p>
-                    <a href="cards.html" class="btn">Открыть</a>
+                    <a href="https://yatavo.github.io/Glowing-cards-in-html-css/cards.html" class="btn">Открыть</a>
                 </div>
 
-                <div class="project-card" onclick="location.href='index.html'">
-                    <div class="icon">🏠</div>
-                    <h3>Главная страница</h3>
-                    <p>Основная страница проекта с навигацией и описанием</p>
-                    <a href="index.html" class="btn">Открыть</a>
-                </div>
             </div>
         </main>
 
